[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Changsu Park", email = "park.csu@pm.me"},
]
dependencies = [
    "requests>=2.28.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
